# BUAA-Code

./: README.md
0-Algorithm/APHiD/: aphid1.h  aphid2.h  file-io.h  global-var.h  input  main.cpp  output  test-helper.h  utils.h
0-Algorithm/APHiD/APHiD_test/: CloverLeaf1024.mat  TeaLeaf1024.mat
0-Algorithm/LPMS/: file-io.h  global-var.h  label-update.h  lpis.h  main.cpp  output  strip.h  test-helper.h  utils.h
0-Algorithm/LPMS/LPMS_test/: TeaLeaf1024.mat  input  miniAMR1024.mat
0-Algorithm/MPIPP/: 128-2019.3.10.10:37.tg  MPIPP_C2PY.c  TimeCostDataFile_128-7-20.txt-128.mat.tg  compiler_test_topology  makefile  map_MPIPP  map_MPIPP.c  map_MPIPP.h  test_topology  test_topology.c  tm_MALLOC.c  tm_MALLOC.h  tm_MAPPING.c  tm_MAPPING.h  tm_TIMINGS.c  tm_TOPOLOGY.c  tm_TOPOLOGY.h
0-Algorithm/QTLS/: global-var.h  main.cpp  merge.h  output  test-helper.h
0-Algorithm/QTMS/: file-io.h  input  strip.h  utils.h
0-Algorithm/TopoMapping/: cost-function.h  file-io.h  global-var.h  greedy-map.h  main.cpp  net_graph.txt  output  par-mapper.h  task-graph.h  task_graph.lgl  test-helper.h  utils.h
0-Algorithm/Treematch/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  libtool  stamp-h1  tm_config.h  tm_config.h.in
0-Algorithm/Treematch/doc/: treematch_doc.txt
0-Algorithm/Treematch/examples/: Makefile  Makefile.am  Makefile.in  test_tm.pl
0-Algorithm/Treematch/examples/binding_constraints/: 16.bind  512.bind  8.bind
0-Algorithm/Treematch/examples/com_patterns/: 256.mat  512.0.5.mat  512.mat  8.mat
0-Algorithm/Treematch/examples/topologies/: 1024.tgt  16.tgt  32.tgt  3375.tgt  512.tgt  64.xml  deco.tgt  m2D_20x20.tgt  m2D_30x30.tgt  m2D_8x8.tgt  t3D_8x4x8.tgt
0-Algorithm/Treematch/src/: Makefile  Makefile.am  Makefile.in
0-Algorithm/Treematch/src/libtreematch/: IntConstantInitializedVector.c  Makefile  Makefile.am  Makefile.in  PriorityQueue.c  fibo.c  k-partitioning.c  libtreematch.la  libtreematch_la-IntConstantInitializedVector.lo  libtreematch_la-PriorityQueue.lo  libtreematch_la-fibo.lo  libtreematch_la-k-partitioning.lo  libtreematch_la-tm_bucket.lo  libtreematch_la-tm_kpartitioning.lo  libtreematch_la-tm_malloc.lo  libtreematch_la-tm_mapping.lo  libtreematch_la-tm_mt.lo  libtreematch_la-tm_scotch.lo  libtreematch_la-tm_solution.lo  libtreematch_la-tm_thread_pool.lo  libtreematch_la-tm_timings.lo  libtreematch_la-tm_topology.lo  libtreematch_la-tm_tree.lo  libtreematch_la-tm_verbose.lo  tm_bucket.c  tm_bucket.h  tm_kpartitioning.c  tm_kpartitioning.h  tm_malloc.c  tm_malloc.h  tm_mapping.c  tm_mapping.h  tm_mt.c  tm_scotch.c  tm_scotch.h  tm_solution.c  tm_solution.h  tm_thread_pool.c  tm_timings.c  tm_topology.c  (+6 more)
0-Algorithm/Treematch/src/libtreematch/.deps/: libtreematch_la-IntConstantInitializedVector.Plo  libtreematch_la-PriorityQueue.Plo  libtreematch_la-fibo.Plo  libtreematch_la-k-partitioning.Plo  libtreematch_la-tm_bucket.Plo  libtreematch_la-tm_kpartitioning.Plo  libtreematch_la-tm_malloc.Plo  libtreematch_la-tm_mapping.Plo  libtreematch_la-tm_mt.Plo  libtreematch_la-tm_scotch.Plo  libtreematch_la-tm_solution.Plo  libtreematch_la-tm_thread_pool.Plo  libtreematch_la-tm_timings.Plo  libtreematch_la-tm_topology.Plo  libtreematch_la-tm_tree.Plo  libtreematch_la-tm_verbose.Plo
0-Algorithm/Treematch/src/libtreematch/.libs/: libtreematch.0.dylib  libtreematch.dylib  libtreematch.la  libtreematch.lai
0-Algorithm/Treematch/src/treematch/: Makefile  Makefile.am  Makefile.in  mapping  mapping.c
0-Algorithm/Treematch/src/treematch/.deps/: mapping-mapping.Po
0-Algorithm/Treematch/src/treematch/.libs/: mapping
0-Algorithm/wasms/: LPMS.wasm  QTMS.js
1-Client/: README.md
1-Client/TCOS/: .babelrc  README.md  index.html  package-lock.json  package.json
1-Client/TCOS/config/: index.js
1-Client/TCOS/src/: main.js
2-Server/: README.md
2-Server/server/: .gitignore  index.js  package.json
2-Server/server/resHandler/: database.json  mainHandler.js
3-TopoGet/mpiP/: Check.mak  Defs.mak  Makefile  config.status  lookup.c  mpi.protos.txt  mpiPconfig.h  mpiPi.c  mpiPi.h  mpiPi_def.h  report.c  weak-symbols-pcontrol.h  weak-symbols-special.h  weak-symbols.h  wrappers.c
3-TopoGet/mpiP/testing/: Makefile
3-TopoGet/pingpong-test/: pingpong_wtime_2file.cpp  pingpong_wtime_final.cpp  pingpong_wtime_final_node.cpp  pingpong_wtime_least_test.cpp  pingpong_wtime_least_test_12.cpp  pingpong_wtime_process_least_test.cpp  pingpong_wtime_process_least_test_12.cpp  pingpong_wtime_process_stable.cpp
3-TopoGet/result/netgraph/: 128.tgt  900.tgt  TimeCostDataFile_128-6-24.txt  TimeCostDataFile_128-7-20.txt  TimeCostDataFile_240-10-24.txt  TimeCostDataFile_240-12-20.txt  TimeCostDataFile_256-11-24.txt  TimeCostDataFile_256-13-20.txt  TimeCostDataFile_320-14-24.txt  TimeCostDataFile_320-16-20.txt  TimeCostDataFile_480-20-24.txt  TimeCostDataFile_480-24-20.txt  TimeCostDataFile_512-22-24.txt  TimeCostDataFile_512-26-20.txt  TimeCostDataFile_640-27-24.txt  TimeCostDataFile_640-32-20.txt
3-TopoGet/result/taskgraph/: 128.mat  16.mat  32.mat  64.mat  CloverLeaf1024.APHiD  CloverLeaf128.APHiD  CloverLeaf128.APHiD.TimeCostDataFile_128-6-24.txt  CloverLeaf128.APHiD.TimeCostDataFile_128-7-20.txt  CloverLeaf128.APHiD.TimeCostDataFile_240-12-20.txt  CloverLeaf240.APHiD  CloverLeaf240.APHiD.TimeCostDataFile_240-10-24.txt  CloverLeaf240.APHiD.TimeCostDataFile_240-12-20.txt  CloverLeaf256.APHiD  CloverLeaf256.APHiD.TimeCostDataFile_256-11-24.txt  CloverLeaf256.APHiD.TimeCostDataFile_256-13-20.txt  CloverLeaf320.APHiD  CloverLeaf320.APHiD.TimeCostDataFile_320-14-24.txt  CloverLeaf320.APHiD.TimeCostDataFile_320-16-20.txt  CloverLeaf480.APHiD  (+9 more)
4-ExpShell/: CloverLeaf-rcr-minor-exp-128.sh  nodefile.CloverLeaf512.CNM.result
5-TestCase/: BasicFatTree-24_4_12_2.tgt  BasicFatTree-24_6_12_2.tgt  miniAMR1024ProcessTopology_Volume.mat
6-ExpResult/: 1-time-bar.js  1-time-line.js  2-TeaLeaf-bar.js  2-TeaLeaf-line.js  3-CoMD.js  4-miniAMR.js  5-CloverLeaf.js
7-evaluation/: main.cpp  objectives.h  strategy.h  utils.h
(+204 files in other folders)
