SUBDIRS = src examples

EXTRA_DIST = LICENCE README AUTHORS \
	     doc/treematch_doc.txt \
	     examples/topologies/64.xml \
	     examples/topologies/16.tgt \
	     examples/topologies/32.tgt \
	     examples/topologies/128.tgt \
	     examples/topologies/512.tgt \
	     examples/topologies/1024.tgt \
	     examples/topologies/3375.tgt\
	     examples/topologies/900.tgt\
	     examples/topologies/m2D_20x20.tgt\
	     examples/topologies/m2D_8x8.tgt\
	     examples/topologies/t3D_8x4x8.tgt\
	     examples/topologies/hypercude_10.tgt\
	     examples/topologies/deco.tgt\
	     examples/topologies/m2D_10x10.tgt\
	     examples/topologies/m2D_30x30.tgt\
	     examples/com_patterns/128.mat \
	     examples/com_patterns/256.mat \
	     examples/com_patterns/64.mat \
	     examples/com_patterns/16.mat \
	     examples/com_patterns/8.mat \
	     examples/com_patterns/32.mat \
	     examples/com_patterns/512.mat \
	     examples/com_patterns/512.0.5.mat \
	     examples/com_patterns/3375.mat \
	     examples/binding_constraints/8.bind \
	     examples/binding_constraints/16.bind \
	     examples/binding_constraints/512.bind \
	     examples/test_tm.pl
